# Swear-Paper

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  build.sh  conanfile.txt  makefile  swear_paper
.devcontainer/: devcontainer.json
.github/workflows/: test.yaml
Swear Paper/: earthporn.hpp  image.cpp  main.cpp  reddit_interface.cpp
Swear Paper.xcodeproj/: project.pbxproj
Swear Paper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Swear Paper.xcodeproj/xcuserdata/patrickmintram.xcuserdatad/xcschemes/: Swear Paper.xcscheme  xcschememanagement.plist
cmake/: ccache.cmake  clang-tidy.cmake  conan.cmake  cpplint.cmake  gcov.cmake
docker/: Dockerfile
src/: CMakeLists.txt  ansi_codes.cpp  ansi_codes.hpp  downloader.cpp  downloader.hpp  downloader_delegate.cpp  downloader_delegate.hpp  downloader_delegate_b.hpp  earthporn.cpp  earthporn.hpp  image.cpp  image.hpp  image_delegate.cpp  image_delegate.hpp  image_delegate_b.hpp  image_location.cpp  image_location.hpp  image_size.cpp  image_size.hpp  json_parse_delegate.cpp  json_parse_delegate.hpp  json_parse_delegate_b.hpp  main.cpp  program_delegate_b.hpp  program_delegates.cpp  program_delegates.hpp  reddit_interface.hpp  run_tidy.sh
src/lib/: cache_or_download.cpp  downloader.cpp  downloader.hpp  downloader_delegate.cpp  downloader_delegate.hpp  downloader_delegate_b.hpp  earthporn.cpp  earthporn.hpp  environment_configuration.cpp  image.cpp  image.hpp  image_delegate.cpp  image_delegate.hpp  image_delegate_b.hpp  image_location.hpp  image_size.hpp  json_parse_delegate.cpp  json_parse_delegate.hpp  json_parse_delegate_b.hpp  program_delegate_b.hpp  program_delegates.cpp  program_delegates.hpp  reddit_interface.hpp
src/lib/include/: cache_or_download.hpp  downloader.hpp  downloader_delegate.hpp  earthporn.hpp  environment_configuration.hpp  fmt_optional.hpp  image.hpp  image_delegate.hpp  image_location.hpp  image_size.hpp  json_parse_delegate.hpp  program_delegates.hpp
src/lib/include/interfaces/: configuration_interface.hpp  downloader_delegate_b.hpp  downloader_interface.hpp  json_parse_delegate_b.hpp  reddit_interface.hpp
test/: cache_or_download_test.cpp  downloader_test.cpp  earthporn_json_parse_test.cpp  environment_configuration_test.cpp  expected_reply.hpp
